# d2c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
bap/: 19_makeKneePlots.R  CMakeLists.txt  annotate_fragments.cpp  annotate_fragments.h  assemble_fragments.cpp  assemble_fragments.h  bamCat.cpp  bamCat.h  bap.cpp  bap.h  compute_bap_stat_chr.cpp  compute_bap_stat_chr.h  determine_barcode_merges.cpp  determine_barcode_merges.h  final_qc_se.cpp  final_qc_se.h  gz_io.cpp  gz_io.h  main.cpp  reannotate_bam_file.cpp  reannotate_bam_file.h  reannotate_fragments_get_summary_stats_chr.cpp  reannotate_fragments_get_summary_stats_chr.h  samReader.cpp  samReader.h  saturation.cpp  saturation.h  taskflow.cpp  taskflow.h  types.h  utility.cpp  utility.h
barcodeRank/: CMakeLists.txt  barcodeRank.cpp  barcodeRank.h  inflection.cpp  inflection.h  kde.cpp
d2c/: 11b_knee_execute.R  19_makeKneePlots.R  CMakeLists.txt  bap.cpp  bap.h  d2c.cpp  d2c.h  gzIO.cpp  gzIO.h  main.cpp  plot.py  rank.R  reannotate.cpp  reannotate.h  samReader.cpp  samReader.h  saturation.cpp  saturation.h  timer.h  types.h  utility.cpp  utility.h
density/: kde.cpp  kde.hpp
doc/: details.md
script/: build.sh
